Bug 947862 - Initialize RealTimeClock on BSDs. r=jesup a=lsblakk